--- a/package.json
+++ b/package.json
@@ -3,15 +3,36 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "npm run lint --fix",
+    "lint:fix:staged": "git diff --diff-filter=d --cached --name-only | grep \".ts$\" | xargs -r eslint --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:staged": "git diff --diff-filter=d --cached --name-only | grep \".ts$\" | xargs -r prettier --write",
+    "postinstall": "node -e \"process.env.NODE_ENV != 'production' && process.exit(1)\" || husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-love": "^47.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "git-commit-msg-linter": "^5.0.7",
-    "typescript": "^5.4.5"
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "tsx": "^4.9.3",
+    "typescript": "^5.4.5",
+    "validate-branch-name": "^1.3.0"
   }
 }
