--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "es2020",
+    "target": "esnext",
     "esModuleInterop": true,
-    "allowJs": true    
+    "allowJs": true,
+    "strict": true,
+    "strictNullChecks": true
   }
 }
