--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest",
+    "test": "jest --passWithNoTests",
+    "test:staged": "jest --passWithNoTests",
     "prepare": "husky",
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "npm run lint --fix",
